Docs: Update GEMINI.md with versioning rules and bump version to 0.25.5

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
             <button class="btn btn-blue" style="width:100%; margin-top:10px;" onclick="toggleSettings()">Done</button>
         </div>
 
-        <div class="version-footer">Version 0.25.4 (Refactored Modular)</div>
+        <div id="versionDisplay"
+            style="position:fixed; bottom:5px; right:5px; color:#444; font-size:10px; z-index:9999;">Version 0.25.5
+            (Refactored Modular)</div>
     </div>
 
     <div id="mainContainer">
