--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         </div>
 
         <div id="versionDisplay"
-            style="position:fixed; bottom:5px; right:5px; color:#444; font-size:10px; z-index:9999;">Version 0.25.5
+            style="position:fixed; bottom:5px; right:5px; color:var(--text-sec); font-size:10px; z-index:9999;">Version
+            0.25.6
             (Refactored Modular)</div>
     </div>
 
