Feat: Add icons to metadata columns (v0.25.11) - Force cache bust

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <div id="versionDisplay"
             style="position:fixed; bottom:5px; right:5px; color:var(--text-sec); font-size:10px; z-index:9999;">Version
-            0.25.9
+            0.25.11
             (Refactored Modular)</div>
     </div>
 
@@ -302,16 +302,17 @@
 
     <!-- CORE LOGIC & UTILS -->
     <script src="js/utils.js"></script>
-    <script src="js/consts.js"></script>
-    <script src="js/statistics.js"></script>
-    <script src="js/state.js"></script>
+    <script src="js/utils.js?v=0.25.11"></script>
+    <script src="js/consts.js?v=0.25.11"></script>
+    <script src="js/statistics.js?v=0.25.11"></script>
+    <script src="js/state.js?v=0.25.11"></script>
 
     <!-- UI & APP LOGIC -->
-    <script src="js/canvas.js"></script>
-    <script src="js/project.js"></script> <!-- Depends on consts, state -->
-    <script src="js/ui.js"></script> <!-- Depends on project, stats -->
-    <script src="js/io.js"></script> <!-- Depends on project, utils -->
-    <script src="js/app.js"></script> <!-- Initializes everything -->
+    <script src="js/canvas.js?v=0.25.11"></script>
+    <script src="js/project.js?v=0.25.11"></script> <!-- Depends on consts, state -->
+    <script src="js/ui.js?v=0.25.11"></script> <!-- Depends on project, stats -->
+    <script src="js/io.js?v=0.25.11"></script> <!-- Depends on project, utils -->
+    <script src="js/app.js?v=0.25.11"></script> <!-- Initializes everything -->
 
 </body>
 
