Feat: Auto-rename duplicates and preserve ID for replicates (v0.25.14)

--- a/index.html
+++ b/index.html
@@ -301,18 +301,18 @@
     </script>
 
     <!-- CORE LOGIC & UTILS -->
-    <script src="js/utils.js"></script>
-    <script src="js/utils.js?v=0.25.11"></script>
-    <script src="js/consts.js?v=0.25.11"></script>
-    <script src="js/statistics.js?v=0.25.11"></script>
-    <script src="js/state.js?v=0.25.11"></script>
+    <!-- Removed duplicate utils.js and non-versioned imports to ensure cache busting -->
+    <script src="js/utils.js?v=0.25.14"></script>
+    <script src="js/consts.js?v=0.25.14"></script>
+    <script src="js/statistics.js?v=0.25.14"></script>
+    <script src="js/state.js?v=0.25.14"></script>
 
     <!-- UI & APP LOGIC -->
-    <script src="js/canvas.js?v=0.25.11"></script>
-    <script src="js/project.js?v=0.25.11"></script> <!-- Depends on consts, state -->
-    <script src="js/ui.js?v=0.25.11"></script> <!-- Depends on project, stats -->
-    <script src="js/io.js?v=0.25.11"></script> <!-- Depends on project, utils -->
-    <script src="js/app.js?v=0.25.11"></script> <!-- Initializes everything -->
+    <script src="js/canvas.js?v=0.25.14"></script>
+    <script src="js/project.js?v=0.25.14"></script> <!-- Depends on consts, state -->
+    <script src="js/ui.js?v=0.25.14"></script> <!-- Depends on project, stats -->
+    <script src="js/io.js?v=0.25.14"></script> <!-- Depends on project, utils -->
+    <script src="js/app.js?v=0.25.14"></script> <!-- Initializes everything -->
 
 </body>
 
